<resources>
    <string name="app_name">RunOut2</string>

    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="ForgotPassword">¿Olvidaste la contraseña?</string>
    <string name="login">Iniciar Sesíon</string>
    <string name="resetPassword">Enviar Contraseña</string>
    <string name="Invitation">¡Corre por tu vida!</string>
    <string name="acept">he leído y acepto los aburridos </string>
    <string name="terms">términos y condiciones de uso.</string>

    <string name="empty_email">Introduce un email</string>
    <string name="invalid_email">mmm parece que no eres tu :/</string>

    <string name="google">GOOGLE</string>
    <string name="facebook">FACEBOOK</string>

    <string name="bar_title_terms">Terminos y condiciones de uso</string>
    <string name="terms1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</string>
    <string name="terms2">laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</string>
    <string name="terms3">dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>

    <string name="default_web_client_id">AIzaSyAv0FxyrcAH2DOu2GHEEt0O8pcH3TMjiLA</string>

    <string name="bar_title">RunOut</string>
    <string name="menu_running">Running</string>
    <string name="menu_record">Historial</string>
    <string name="menu_becamepremium">Hazte premium</string>
    <string name="menu_signout">Cerrar Sesión</string>
    <string name="menu_clearpreference">Restablecer ajustes</string>

    <string name="nav_hi">Corre como una carterista por todo Madrid!!!</string>
    <string name="user">Informacion@RunOut.com</string>

    <string name="level">Nivel</string>

    <string name="navigation_drawer_close">Menu</string>
    <string name="navigation_drawer_open">Close</string>

    <string name="bar_title_record">Historial</string>
    <string name="fbHome_ContentDescription">Boton para volver a la pantalla principal</string>
    <string name="ivLevelRollerSkate_ContentDescription">boton para ver el historial de carreras en patines</string>
    <string name="ivBike_ContentDescription">boton para ver el historial de carreras en bicicleta</string>
    <string name="ivLevelRunning_ContentDescription">boton para ver el historial de carreras a pie</string>

    <string name="orderby_dateZA">Fecha (Recientes primero)</string>
    <string name="orderby_durationZA">Duracion (Mayores primero)</string>
    <string name="orderby_distanceZA">Distancia (Mayores primero)</string>
    <string name="orderby_avgspeedZA">Vel. Prom. (Mayores primero)</string>
    <string name="orderby_maxspeedZA">Vel. Max. (Mayores primero)</string>

    <string name="orderby_dateAZ">Fecha (Antiguos primero)</string>
    <string name="orderby_durationAZ">Duracion (Menores primero)</string>
    <string name="orderby_distanceAZ">Distancia (Menores primero)</string>
    <string name="orderby_avgspeedAZ">Vel. Prom. (Menores primero)</string>
    <string name="orderby_maxspeedAZ">Vel. Max. (Menores primero)</string>

    <string name="start">¡DE UNA!</string>
    <string name="stop">VAMO A CALMARNO</string>
    <string name="finish">Finalizar</string>
    <string name="rounds">Round 1</string>
    <string name="time_running">Running time</string>
    <string name="time_walking">Walking time</string>
    <string name="walking_clock">00:00</string>
    <string name="init_stop_watch_value">00:00:00</string>

    <string name="hard_volumen">Volumen de Música Fuerte</string>
    <string name="soft_volumen">Volumen de Música Tranqui</string>
    <string name="notification_volumen">Volumen de Notificaciones</string>
    <string name="hard_position">00:00:00</string>
    <string name="hard_duration">01:00:00</string>
    <string name="soft_position">00:00:00</string>
    <string name="soft_duration">01:00:00</string>

    <string name="PopUpTotalRuns">Carrera: </string>
    <string name="PopUpTotalDistance">Kms acumulados: </string>
    <string name="PopUpTotalTime">Total time: </string>
    <string name="NoDataWarning">No hay datos registrados. Recuerda activar el GPS si deseas información de tu carrera</string>

    <string name="PopUpDurationTitle">DURACION</string>
    <string name="PopUpChallengeTitle">OBJETIVO</string>
    <string name="PopUpIntervalTitle">INTERVALOS</string>
    <string name="PopUpDistanceTitle">DISTANCIA</string>
    <string name="PopUpAvgSpeedTitle">VELOCIDAD PROMEDIO</string>
    <string name="PopUpMaxSpeedTitle">VELOCIDAD MÁXIMA</string>
    <string name="PopUpUnevennessTitle">DESNIVEL</string>

    <string name="textNull"></string>
    <string name="textNoData">-</string>

    <string name="medalDistanceDescription">Distancia [Record Personal]</string>
    <string name="medalAvgSpeedDescription">Vel. Máx. [Record Personal]</string>
    <string name="medalMaxSpeedDescription">Vel. Prom. [Record Personal]</string>





</resources>





























