<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/orderby_date"
      
        android:title="@string/orderby_dateZA" />

    <item android:id="@+id/orderby_duration"
        android:title="@string/orderby_durationZA" />

    <item android:id="@+id/orderby_distance"
        android:title="@string/orderby_distanceZA" />

    <item android:id="@+id/orderby_avgspeedZA"
        android:title="@string/orderby_avgspeedZA" />

    <item android:id="@+id/orderby_maxpeed"
        android:title="@string/orderby_maxspeedZA" />

    <!-- si queremos que una opcion aprezca SIEMPRE

    en la cabecera del menu
        xmlns:app="http://schemas.android.com/apk/res-auto"

    en la etiqueta dle item, la siguiente propiedad
        app:showAsAction="always"

    si le queremos poner un icono
        android:icon="@mipmap/running"

    -->

</menu>