<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_record"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_dark"
            app:layout_scrollFlags="scroll|enterAlways"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_dark"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/lySports"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/gray_light"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBike"
                android:contentDescription="@string/ivBike_ContentDescription"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".3"
                android:background="@color/gray_medium"
                android:onClick="loadRunsBike"

                android:src="@mipmap/bike" />

            <ImageView
                android:id="@+id/ivLevelRollerSkate"
                android:contentDescription="@string/ivLevelRollerSkate_ContentDescription"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".3"
                android:background="@color/gray_medium"
                android:onClick="loadRunsRollerSkate"
                android:src="@mipmap/rollerskate" />

            <ImageView
                android:id="@+id/ivLevelRunning"
                android:contentDescription="@string/ivLevelRunning_ContentDescription"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".3"
                android:background="@color/orange"
                android:onClick="loadRunsRunning"
                android:src="@mipmap/running" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/rlRecyclers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_light">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRecords"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>


        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbHome"
            android:contentDescription="@string/fbHome_ContentDescription"
            android:layout_width="91dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:backgroundTint="@color/salmon_dark"
            android:src="@drawable/camino"
            android:translationY="-90dp"
            android:translationX="20dp"
            android:layout_marginRight="50dp"
            android:onClick="callHome"
            app:maxImageSize="70dp"
            />

    </LinearLayout>

